Paging and Sortation of Projects, Comments and Tickets